--- a/Interview/Interview.csproj
+++ b/Interview/Interview.csproj
@@ -3,8 +3,15 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>02797a93-be42-4f14-9b4f-c0f6821ec108</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+	  <_Parameter1>InterviewTests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>	
+	
   <ItemGroup>
     <PackageReference Include="contentstack.csharp" Version="2.12.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
